# powerpoint_generator

./: pyproject.toml
pptx_generator/: main.py  output_presentation.pptx  streamlit.py
